# autotest

./: .env.example  .gitignore  AUDIT_REPORT.md  README.md  implementatinon_plan.md  implementation_plan.md  implementation_plann.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: base.py  github_import.py  llm_factory.py  orchestrator.py  state.py
backend/app/agents/nodes/: architecture.py  bug_localization.py  execution.py  learning.py  patch_validation.py  planner.py  program_repair.py  requirement.py  retriever.py  root_cause.py  test_generation.py  test_strategy.py  verification.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  security.py
backend/app/evaluation/: __init__.py  metrics_service.py  xai_service.py
backend/app/execution/: __init__.py  coverage_parser.py  result_parser.py  sandbox.py
backend/app/execution/runners/: __init__.py  newman_runner.py  playwright_runner.py  pytest_runner.py
backend/app/knowledge/: __init__.py
backend/app/knowledge/graph/: endpoints.py  (+3 more)
backend/app/memory/: redis_service.py
backend/app/models/: __init__.py  audit_log.py  base.py  bug_report.py  code_entity.py  patch.py  patch_validation.py  project.py  requirement.py  source_file.py  test_case.py  test_result.py  test_run.py  user.py
backend/app/repair/: __init__.py  patch_engine.py  patch_validator.py  regression_checker.py
backend/app/schemas/: auth.py  common.py  project.py
backend/app/services/: auth_service.py  graph_builder.py  graph_query_service.py  neo4j_service.py  project_service.py  rag_service.py
backend/app/utils/: helpers.py
backend/tests/: conftest.py  test_integration.py  test_unit.py
(+59 files in other folders)
