[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autotest-ai"
version = "1.0.0"
description = "Agentic Multi-Agent Software Quality Engineer"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # MongoDB
    "motor>=3.6.0",
    "beanie>=1.26.0",

    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.0",

    # Validation & Settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # Redis
    "redis[hiredis]>=5.2.0",

    # Neo4j
    "neo4j>=5.25.0",

    # AI / LLM
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-groq>=0.1.0",
    "llama-index>=0.11.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    "chromadb>=0.5.0",
    "openai>=1.50.0",

    # Execution Sandbox
    "docker>=7.0.0",
    "pytest-json-report>=1.5.0",

    # Utilities
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "mongomock-motor>=0.0.34",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101", "S105"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
